--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "babel-jest": "^29.5.0",
     "css-loader": "^6.8.1",
     "eslint": "^8.42.0",
+    "html-loader": "^4.2.0",
     "jest": "^29.5.0",
+    "sass": "^1.63.3",
+    "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
     "webpack": "^5.86.0",
     "webpack-cli": "^5.1.4"
