--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-jest": "^29.5.0",
     "css-loader": "^6.8.1",
     "eslint": "^8.42.0",
+    "file-loader": "^6.2.0",
     "html-loader": "^4.2.0",
     "jest": "^29.5.0",
     "sass": "^1.63.3",
